--- a/src/groupProjectDetails.fxml
+++ b/src/groupProjectDetails.fxml
@@ -2,10 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
@@ -16,24 +19,42 @@
             <Button mnemonicParsing="false" text="Confirm" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
-            <GridPane BorderPane.alignment="CENTER">
-                <Label text="Project Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
+            <BorderPane BorderPane.alignment="CENTER">
+               <top>
+                  <GridPane BorderPane.alignment="CENTER">
+                      <Label text="Project Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                      <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                      <Label text="Description:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
+                        <children>
+                           <Button mnemonicParsing="false" text="Add" />
+                        </children>
+                     </FlowPane>
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </top>
+               <center>
+                  <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <columns>
+                      <TableColumn prefWidth="289.0" text="Area" />
+                      <TableColumn prefWidth="211.0" text="People Needed" />
+                        <TableColumn prefWidth="95.0" text="Delete" />
+                    </columns>
+                  </TableView>
+               </center>
+            </BorderPane>
          </center>
          <top>
             <Label prefHeight="17.0" prefWidth="149.0" text="Create A New Project" BorderPane.alignment="CENTER" />
