okay, add new job fixed

--- a/src/addNewSubProject.fxml
+++ b/src/addNewSubProject.fxml
@@ -23,12 +23,12 @@
               <rowConstraints>
                 <RowConstraints maxHeight="123.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Job" />
-                  <Label text="Number Of People " GridPane.rowIndex="1" />
-                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" />
+                 <!-- <Label text="Number Of People " GridPane.rowIndex="1" />
+                  <ChoiceBox prefWidth="150.0" GridPane.columnIndex="1" /> -->
+
                   <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label text="Description" GridPane.rowIndex="2" />
                   <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
