--- a/src/groupProjectDetails.fxml
+++ b/src/groupProjectDetails.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GroupProjectDetails">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml" fx:controller="Controller">
    <children>
       <BorderPane layoutX="21.0" prefHeight="400.0" prefWidth="600.0">
          <bottom>
             <FlowPane alignment="CENTER" columnHalignment="CENTER" prefWidth="619.0" BorderPane.alignment="CENTER">
                <children>
                   <Button mnemonicParsing="false" text="Save" />
-                  <Button mnemonicParsing="false" text="Cancel" />
+                  <Button mnemonicParsing="false" text="Cancel" onAction="#handleCloseStage" />
                </children>
             </FlowPane>
          </bottom>
@@ -33,7 +33,7 @@
                       <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                         <children>
-                           <Button mnemonicParsing="false" text="Add" />
+                           <Button mnemonicParsing="false" text="Add" onAction="#handleAddProject"/>
                         </children>
                      </FlowPane>
                     <columnConstraints>
